force-app/main/default/objects/FEC_Assignment__c/FEC_Assignment__c.object-meta.xml
<CustomObject>
    <label>Assignment</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>