force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Assignment_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Name__c</fullName>
    <label>Assignment Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>