force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Assignment_Owner__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>