force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Assignment_Owner_Text__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Owner_Text__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(FEC_Assignment_Status__c, &quot;Completed&quot;),
    ISPICKVAL(FEC_Assignment_Status__c, &quot;AutoCompleted&quot;),
    ISPICKVAL(FEC_Assignment_Status__c, &quot;AutoRecall&quot;)
  ),
  &quot;Unassigned&quot;,
  IF(
    NOT(ISBLANK(FEC_Assignment_Owner__c)),
    LEFT(FEC_Assignment_Owner__r.Email, FIND(&quot;@&quot;, FEC_Assignment_Owner__r.Email) - 1),
    IF(
      NOT(ISBLANK(FEC_OwnerID__c)),
      FEC_OwnerID__c,
      &quot;&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Owner (Text)</label>
    <type>Text</type>
</CustomField>