force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Assignment_Remark__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Remark__c</fullName>
    <description>Trường lưu trữ các ghi chú User nhập trên Assignment</description>
    <label>Assignment Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>