force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Assignment_Routing_Action__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Routing_Action__c</fullName>
    <description>Trường tạo ra để lưu trữ các Routing Action đã thực hiện trên level Assignment</description>
    <label>Assignment Routing Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>