force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Status__c</fullName>
    <defaultValue>&apos;Open&apos;</defaultValue>
    <label>Assignment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Resolved-Completed</fullName>
            </value>
            <value>
                <fullName>Resolved-Rejected</fullName>
            </value>
            <value>
                <fullName>Resolved-Cancelled</fullName>
            </value>
            <value>
                <fullName>Resolved-CannotContactCustomer</fullName>
            </value>
            <value>
                <fullName>Pending-CSInternal</fullName>
            </value>
            <value>
                <fullName>Pending-Customer</fullName>
            </value>
            <value>
                <fullName>Pending-CardOps</fullName>
            </value>
            <value>
                <fullName>Pending-Collections</fullName>
            </value>
            <value>
                <fullName>Pending-CP</fullName>
            </value>
            <value>
                <fullName>Pending-CA</fullName>
            </value>
            <value>
                <fullName>Pending-DirectSales</fullName>
            </value>
            <value>
                <fullName>Pending-Telesales</fullName>
            </value>
            <value>
                <fullName>Pending-CardOpsOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-CollectionsOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-CPOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-CAOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-DirectSalesOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-TelesalesOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-ITOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-PaymentOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-PBDOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-RCPAOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-SecurityOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-VendorOutOfSystem</fullName>
            </value>
            <value>
                <fullName>Pending-OutOfProcess</fullName>
            </value>
            <value>
                <fullName>Pending-CICRelated</fullName>
            </value>
            <value>
                <fullName>Pending-DocumentPreparation</fullName>
            </value>
            <value>
                <fullName>Pending-TaskUnderReview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>