force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>