force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Draft_Assignment_Remark__c.field-meta.xml
<CustomField>
    <fullName>FEC_Draft_Assignment_Remark__c</fullName>
    <description>Trường lưu các giá trị assignment remark sau khi save &amp; close</description>
    <label>Draft_ Assignment_Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>