force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Manager_ID_List__c.field-meta.xml
<CustomField>
    <fullName>FEC_Manager_ID_List__c</fullName>
    <label>Manager ID List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>