force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Manual__c.field-meta.xml
<CustomField>
    <fullName>FEC_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual</label>
    <type>Checkbox</type>
</CustomField>