force-app/main/default/objects/FEC_Assignment__c/fields/FEC_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>FEC_OwnerID__c</fullName>
    <description>Trường lưu trữ giá trị user id, queue id là owner của assignment</description>
    <label>OwnerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>