force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Recently_Auto_Case_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Recently_Auto_Case_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Assignment rule that last auto-distributed this Assignment record (rule 2.2).</description>
    <label>Recently Auto Case Assignment</label>
    <referenceTo>FEC_Case_Assignment__c</referenceTo>
    <relationshipLabel>Assignments (Recently Auto)</relationshipLabel>
    <relationshipName>Assignments_Recently_Auto</relationshipName>
    <type>Lookup</type>
</CustomField>