force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Submitted_On__c</fullName>
    <description>Thời điểm user submit Assignment (N5). Dùng để gán FEC_Submitted_On__c trên Routing Action History (TH2).</description>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>