force-app/main/default/objects/FEC_Assignment__c/fields/FEC_Team__c.field-meta.xml
<CustomField>
    <fullName>FEC_Team__c</fullName>
    <description>Hiển thị Team của User/ Queue đang phụ trách Assignment</description>
    <label>Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>