force-app/main/default/objects/FEC_Assignment__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>